fix: upload images to cloud, update image orientation

--- a/pages/application/software-interface/buyer.mdx
+++ b/pages/application/software-interface/buyer.mdx
@@ -12,13 +12,37 @@ finding their favorite products, checking their cart, managing their account
 information, tracking their order, to accessing virtual outfit fitting room, adjusting
 personal settings, and being able to log out simply and efficiently.
 
-![navbar 1](/assets/UIUX_design/4.15.png "Navbar design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890940/4.15_gilbxy.png"
+  alt="Navbar design"
+  title="Navbar design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 1. Navbar design"} />
 
-![navbar 2](/assets/UIUX_design/4.16.png "Navbar design when menus are expanded")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890941/4.16_myhzmu.png"
+  alt="Navbar design when menus are expanded"
+  title="Navbar design when menus are expanded"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 2. Navbar design when menus are expanded"} />
+
+<br />
 
 Navbar design promotes simplicity, accessibility, and desirability in UI/UX design.
 At the same time, the menus are also crucial and useful as the users can get to many important pages from anywhere on the platform.
@@ -28,21 +52,67 @@ That completes the user experience, making it more comfortable and convenient wh
 
 This is where buyers can access most of the platform's features once logged in. The page includes sections for advertisement banners, popular categories, recently accessed products (if available), flash sale products, hot stores, and best-selling products.
 
-![home 1](/assets/UIUX_design/4.17.png "Advertisement banner carousel design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890940/4.17_yzsz1i.png"
+  alt="Advertisement banner carousel design"
+  title="Advertisement banner carousel design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 3. Advertisement banner carousel design"} />
 
-![home 2](/assets/UIUX_design/4.18.png "Popular categories & Recently accessed products")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890954/4.18_xsf9do.png"
+  alt="Popular categories & Recently accessed products"
+  title="Popular categories & Recently accessed products"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 4. Popular categories & Recently accessed products"} />
 
-![home 3](/assets/UIUX_design/bonus1.png "Flash sales & Hot shops")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890954/bonus1_x3pi47.png"
+  alt="Flash sales & Hot shops"
+  title="Flash sales & Hot shops"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 5. Flash sales & Hot shops"} />
 
-![home 4](/assets/UIUX_design/bonus2.png "Best-selling products")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721890955/bonus2_v7iibx.png"
+  alt="Best-selling products"
+  title="Best-selling products"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 6. Best-selling products"} />
+
+<br />
 
 The homepage impresses with its sophisticated and modern interface design. The sections are logically arranged, and the information is balanced, ensuring users are not overwhelmed when entering the platform. Additionally, the combination of various layouts makes interactions more engaging and appealing, enhancing user accessibility.
 
@@ -50,21 +120,67 @@ The homepage impresses with its sophisticated and modern interface design. The s
 
 The store page displays general information about the store, personalized booth, product lists, and collection lists.
 
-![shop 1](/assets/UIUX_design/4.19.png "Shop's booth design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892118/4.19_jic9lh.png"
+  alt="Shop's booth design"
+  title="Shop's booth design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 7. Shop's booth design"} />
 
-![shop 2](/assets/UIUX_design/4.20.png "All shop's products with filter and search bar")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892119/4.20_dh3llq.png"
+  alt="All shop's products with filter and search bar"
+  title="All shop's products with filter and search bar"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 8. All shop's products with filter and search bar"} />
 
-![shop 3](/assets/UIUX_design/4.21.png "Shop's collection list design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892119/4.21_irs6b8.png"
+  alt="Shop's collection list design"
+  title="Shop's collection list design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 9. Shop's collection list design"} />
 
-![shop 4](/assets/UIUX_design/4.22.png "About shop design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892120/4.22_nwwfbi.png"
+  alt="About shop design"
+  title="About shop design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 10. About shop design"} />
+
+<br />
 
 The store page contains a moderate amount of information, preventing users from feeling overwhelmed upon access. Additionally, the combination of various layouts makes interactions more engaging and appealing, enhancing user accessibility. The navigation menu is intuitive and flexible, paired with product categories presented in a spacious and attractive manner. Featured products and promotions are highlighted subtly, drawing immediate attention. Convenient filtering and sorting functions help users quickly find suitable products.
 
@@ -74,27 +190,77 @@ The page comprehensively gathers all store information, clearly and logically di
 
 When accessing the product information page, users can view all the product's features, including general information, detailed specifications, compatible products, review lists (and comments if available), AI-assisted review summaries, and similar products.
 
-![product 1](/assets/UIUX_design/4.23.png "Product's general information design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721894169/4.23_gutn6v.png"
+  alt="Product's general information design"
+  title="Product's general information design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 11. Product's general information design"} />
 
-![product 2](/assets/UIUX_design/4.24.png "Product combo design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721894170/4.24_opkngn.png"
+  alt="Product combo design"
+  title="Product combo design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 12. Product combo design"} />
 
+<br />
+
 The combo product section provides suggestions for items that are often paired together, helping users to have a more complete experience with the product.
 
-![product 3](/assets/UIUX_design/4.25.png "Product's detailed information menu design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721894170/4.25_wlgcpv.png"
+  alt="Product's detailed information menu design"
+  title="Product's detailed information menu design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 13. Product's detailed information menu design"} />
+
+<br />
 
 The description section is where sellers can manually craft detailed information using a support tool, allowing the inclusion of images, videos, and text with various fonts and layouts.
 
 The review overview section includes all product reviews, comments on reviews, the average star rating of the product, and an AI-generated summary of reviews (featuring comments and a pie chart representation of positive, negative, and spam reviews).
 
-![product 4](/assets/UIUX_design/4.26.png "Product's review summary and list")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721894180/4.26_k5sit5.png"
+  alt="Product's review summary and list"
+  title="Product's review summary and list"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 14. Product's review summary and list"} />
+
+<br />
 
 Each product detail page is carefully designed, providing comprehensive information and high-quality images, creating a perfect online shopping experience. The clear and logical layout across the main sections of the page adheres not only to usability principles but also reflects principles of searchability and discoverability.
 
@@ -104,9 +270,22 @@ Furthermore, users can check reviews or AI-generated review summaries. The AI as
 
 The checkout flow begins by adding a product to the cart from the homepage, the product information page, or the store's product list.
 
-![cart](/assets/UIUX_design/4.27.png "Cart design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721893631/4.27_rpmtbd.png"
+  alt="Cart design"
+  title="Cart design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 15. Cart design"} />
+
+<br />
 
 The cart interface is designed to be incredibly convenient and user-friendly. At first glance, users will immediately be impressed by the neat and easy-to-understand layout. Products in the cart are clearly displayed with images, product names, quantities, and prices, making it easy for users to track and manage their orders. The functions to update product quantities or remove items from the cart are intuitive and quick, providing a seamless shopping experience. Additionally, the cost summary, including taxes and shipping fees, is presented transparently, allowing users to accurately grasp the total amount to be paid. The checkout interface is simple yet comprehensive, with clear steps that create a sense of security and convenience for customers as they complete their orders.
 
@@ -114,14 +293,49 @@ The cart interface is designed to be incredibly convenient and user-friendly. At
 
 The chatbot is always accessible on the platform by clicking the "Assistant" button in the bottom right corner of the screen.
 
-![chatbot 1](/assets/UIUX_design/4.28.png "Chatbot button design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892622/4.28_vd2blj.png"
+  alt="Chatbot button design"
+  title="Chatbot button design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 16. Chatbot button design"} />
 
-![chatbot 2](/assets/UIUX_design/4.29.png "Chatbot default interface design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892623/4.29_jkwdhj.png"
+  alt="Chatbot default interface design"
+  title="Chatbot default interface design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 17. Chatbot default interface design"} />
 
-![chatbot 3](/assets/UIUX_design/4.30.png "Chatbot expanded interface design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721892625/4.30_f4lwyi.png"
+  alt="Chatbot expanded interface design"
+  title="Chatbot expanded interface design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 18. Chatbot expanded interface design"} />
+
+<br />
