--- a/pages/application/software-interface/seller.mdx
+++ b/pages/application/software-interface/seller.mdx
@@ -8,21 +8,60 @@ Below is the design of how in-app elements look to sellers in our seller center 
 
 This is where sellers can access most of the platform's features once logged in. Additionally, comprehensive information about business operations will be presented on the homepage.
 
-![home 1](/assets/UIUX_design/4.31.png "Home page design upon boarding the website")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721895673/4.31_yselvn.png"
+  alt="Home page design upon boarding the website"
+  title="Home page design upon boarding the website"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 1. Home page design upon boarding the website"} />
 
+<br />
+
 The menu and assistant button will always be fixed on the page, while the page content will be scrollable. The seller's homepage includes a welcome banner, quick statistics, business performance, operational efficiency, last week's operational quality score column, and notifications.
 
-![home 2](/assets/UIUX_design/4.32.png "Expanded home page design")
+<br/>
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721895673/4.32_vehwtj.png"
+  alt="Expanded home page design"
+  title="Expanded home page design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 2. Expanded home page design"} />
 
+<br />
+
 ## Sales Quality
 
-![sales](/assets/UIUX_design/4.33.png "Sales quality page design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721895885/4.33_xcnbjy.png"
+  alt="Sales quality page design"
+  title="Sales quality page design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 3. Sales quality page design"} />
+
+<br />
 
 Business performance is clearly showcased through features and design that excellently meet the needs of both users and businesses. The interface not only optimizes user experience but also provides useful tools for systematizing and comparing business results, thereby enhancing revenue and streamlining business processes.
 
@@ -30,38 +69,122 @@ Business performance is clearly showcased through features and design that excel
 
 When sellers access the "Store Decoration" section, they are greeted with a preview image of their storefront. At this point, sellers can add widgets to display their desired items. Currently, the platform supports widgets with templates for products, categories, discount codes, collections, and promotional banners.
 
-![booth 1](/assets/UIUX_design/4.34.png "Booth review and widget list management design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896031/4.34_xgvevg.png"
+  alt="Booth review and widget list management design"
+  title="Booth review and widget list management design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 4. Booth review and widget list management design"} />
 
-![booth 2](/assets/UIUX_design/4.35.png "Widget type selection drawer design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896032/4.35_xyvu8w.png"
+  alt="Widget type selection drawer design"
+  title="Widget type selection drawer design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 5. Widget type selection drawer design"} />
+
+<br />
 
 Widgets can also be reordered by holding the widget handle icon in the list on the right. Personalizing the storefront adds a distinctive touch to the business when meticulously invested in. Therefore, the platform supports sellers and businesses in effectively showcasing their brand, from product presentation to promotions and special events, all aimed at enhancing reputation and trustworthiness in the eyes of consumers.
 
 ## Product management
 
-![product 1](/assets/UIUX_design/4.36.png "Product list management design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896857/4.36_plxjxt.png"
+  alt="Product list management design"
+  title="Product list management design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 6. Product list management design"} />
 
+<br />
+
 In the "Product List" section, sellers can view all products in the store. This is where they can perform various actions related to products, such as searching, editing, or deleting items. The page categorizes products by their status and displays them in a table. Each status category includes explanatory notes to help sellers understand the classification. Filtering by category and sorting columns are available features that assist sellers in getting an overview of their products. The interface is arranged simply and familiarly, with colors highlighting the functions of the buttons.
 
-![product 2](/assets/UIUX_design/4.37.png "View product detail design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896860/4.37_yiiy35.png"
+  alt="View product detail design"
+  title="View product detail design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 7. View product detail design"} />
 
-![product 3](/assets/UIUX_design/4.38.png "Manual product creation form 1")
-![product 3](</assets/UIUX_design/4.38(1).png> "Manual product creation form 2")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896865/4.38_dsdt8k.png"
+  alt="Manual product creation form 1"
+  title="Manual product creation form 1"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896862/4.38_1_bqfoqv.png"
+  alt="Manual product creation form 2"
+  title="Manual product creation form 2"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 8. Manual product creation form"} />
 
+<br />
+
 When creating a new product, sellers are required to fill in mandatory information and can provide additional details to describe the product more clearly. Related information fields are categorized into the same section. A list of sections is always displayed on the right side for quick access. The layout divides information areas logically, with notes indicating which fields are important and examples provided to clarify the meaning of the required fields.
 
-![product 4](/assets/UIUX_design/4.39.png "Create image using AI form")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721896868/4.39_ftcmow.png"
+  alt="Create image using AI form"
+  title="Create image using AI form"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 9. Create image using AI form"} />
+
+<br />
 
 In the image addition section, sellers can upload photos, select images from a collection, or use the virtual model feature to create product images.
 
@@ -69,9 +192,22 @@ The product creation interface is impressively meticulous, clean, and profession
 
 Additionally, the interface offers suggestions and detailed instructions to ensure even new users can easily navigate. The product preview feature allows users to review and make edits before publishing, ensuring all details are perfect. Overall, the product creation interface not only saves time and effort but also enhances the professionalism and credibility of the product when introduced to customers.
 
-![product 5](/assets/UIUX_design/4.40.png "Import product list menu design")
+<br />
+
+<img
+  src="https://res.cloudinary.com/dscan7kgm/image/upload/v1721899423/4.40_wzudpv.png"
+  alt="Import product list menu design"
+  title="Import product list menu design"
+  style={{
+    display: "block",
+    marginLeft: "auto",
+    marginRight: "auto",
+  }}
+/>
 
 <Figure content={"Figure 10. Import product list menu design"} />
+
+<br />
 
 The bulk product creation interface using Excel files is a standout feature with its smart and user-friendly design. The process of uploading Excel files is simple and quick, allowing users to update multiple products in just a few steps. This interface supports standardized Excel file templates, ensuring data consistency and accuracy.
 
