fix: add image link instead of file

--- a/pages/future-direction/direction.mdx
+++ b/pages/future-direction/direction.mdx
@@ -1,7 +1,3 @@
----
-title: "Future Directions: Development Strategies"
----
-
 ## Development Strategies
 
 To address the current limitations, we propose the following development strategies:
@@ -13,16 +9,55 @@ on smaller datasets but still maintain high responsiveness. Fine-tuning these mo
 data will not only improve the accuracy and effectiveness of AI features but also reduce our dependence on third-party
 services, optimizing costs in the process.
 
+<img
+  src="https://www.labellerr.com/blog/content/images/2023/08/6488323befb01b8fac0fe171_VmVuJPKbeUxwrJcqoQ5EYZOSWGiW2rE-C_Yj563jJAQrE2V8PP1ibzWUrXrDLXzJIl7i205vzAfQKRL53whzjrBJKXtP8J9j4J_Pn9vtAh-o9sxEUAIPxHYZgNuJyvOXleZZDzTxr8sIh371Xznqwn8.png"
+  alt="Utilizing Specialized Language Models"
+  title="Utilizing Specialized Language Models"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
+
 ### Enhancing Image Generation Models
 
 For image generation models, upgrading server configurations and fine-tuning the models to lower resource demands
 and optimize response times is essential. This will enhance both user experience and overall system performance.
+
+<img
+  src="https://i.ytimg.com/vi/vFZgPyCJflE/maxresdefault.jpg"
+  alt="Enhancing Image Generation Models"
+  title="Enhancing Image Generation Models"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### Admin Website and System Optimization
 
 A key future development is building the admin website to provide management, monitoring, and optimization tools
 for system operations. This will allow administrators to easily track and adjust features and services according
 to real-time needs.
+
+<img
+  src="https://themefisher.com/blog-thumb/e-commerce-website-admin-panel-templates.webp"
+  alt="Admin Website and System Optimization"
+  title="Admin Website and System Optimization"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 Additionally, the system needs to be improved to enhance performance and user experience. Here are several strategies
 for better optimization:
