--- a/pages/overview/genai.mdx
+++ b/pages/overview/genai.mdx
@@ -1,6 +1,17 @@
 # What is Generative AI ?
 
-![Generative AI](../../public/assets/chapter_2/2.1.png)
+<img
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721879877/dkmnyguedzwxm1fbhhv6.png"
+  alt="Generative AI"
+  title="Generative AI"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "100%",
+  }}
+/>
 
 ## Generative AI
 
@@ -11,7 +22,18 @@ Unlike traditional AI models that focus on analyzing and predicting based on exi
 the ability to learn from data and automatically create new data that has never existed in the training dataset
 with high quality and speed.
 
-![Generative AI  vs. Traditional AI](../../public/assets/chapter_2/2.2.jpg)
+<img
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721880230/d2twsan976rdnky4ptrh.jpg"
+  alt="Comparison"
+  title="Comparison"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "100%",
+  }}
+/>
 
 ## How Does Generative AI Work?
 
