--- a/pages/overview/relevant-research/chatbot.mdx
+++ b/pages/overview/relevant-research/chatbot.mdx
@@ -5,7 +5,18 @@ and customers. Below are some outstanding chatbots in each field.
 
 ## Ada's Chatbot in Healthcare
 
-![Ada Chatbot](../../../public/assets/chapter_2/2.4.png)
+<img
+  src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*I6FVdKwUOxQqTxLA-Yix1w.png"
+  alt="Ada Chatbot"
+  title="Ada Chatbot"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "100%",
+  }}
+/>
 
 In healthcare, Ada's chatbot is a vital part of their virtual healthcare platform, designed to optimize user experience
 and improve the efficiency of healthcare organizations. Ada uses advanced NLP algorithms to accurately understand user
@@ -16,7 +27,18 @@ in enhancing healthcare delivery and operational efficiency.
 
 ## Edubot's Chatbot in Education
 
-![Edubot Chatbot](../../../public/assets/chapter_2/2.5.png)
+<img
+  src="https://verge-ai.com/wp-content/uploads/2024/03/EduBot-the-AI-Chatbot-for-Higher-Education-1024x1024.webp"
+  alt="Edubot Chatbot"
+  title="Edubot Chatbot"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "60%",
+  }}
+/>
 
 In education, Edubot is an AI chatbot developed by VergeAI specifically for higher education institutions. It is uniquely designed
 for the education sector and can be easily customized to meet the needs of individual institutions, automating administrative tasks
