--- a/pages/overview/relevant-research/gen-image.mdx
+++ b/pages/overview/relevant-research/gen-image.mdx
@@ -2,7 +2,19 @@ import SimplyCustomizedImage from "../../../components/CustomizedImages/SimplyCu
 
 # Image Generation Models
 
-![Image Generation Models](../../../public/assets/chapter_2/2.6.jpg)
+<img
+  src="https://zigap.ir/wp-content/uploads/2023/11/b9da17ad-9169-4a6a-a98c-929419431aba.jpg"
+  alt="Image Generation Models"
+  title="Image Generation Models"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
+
 Image generation models are a type of machine learning model capable of creating new images based on given input data.
 These models, trained on vast datasets, can produce entirely new images or modify existing ones as desired.
 
@@ -15,7 +27,7 @@ These models, trained on vast datasets, can produce entirely new images or modif
 - **ArtBreeder & DeepArt:** blend and create new artistic images.
 
 <img
-  src="/assets/chapter_2/2.7.png"
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721882873/ltmhioatblsf5bdtgrp5.png"
   alt="AI Gen Image"
   title="AI Gen Image"
   style={{
@@ -33,12 +45,37 @@ These models, trained on vast datasets, can produce entirely new images or modif
   different sources to generate unique images. Cosmopolitan's AI-generated cover in June 2022 demonstrated AI's potential in
   creative industries.
 
-  ![Cosmopolitan's AI-generated cover](../../../public/assets/chapter_2/2.8.jpg)
+  {" "}
+
+  <img
+    src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721882869/aafsw9arlbkwxledqjca.jpg"
+    alt="Cosmopolitan's AI-generated cover"
+    title="Cosmopolitan's AI-generated cover"
+    style={{
+      display: "block",
+      marginTop: "10px",
+      marginLeft: "auto",
+      marginRight: "auto",
+      width: "90%",
+    }}
+  />
 
 - **Entertainment:** Image generation models create realistic environments and characters for video games and films, saving time
   and resources. An example is "The Frost," a 12-minute film where AI generated every scene using DALL-E 2 and D-ID.
 
-  ![The Frost](../../../public/assets/chapter_2/2.9.jpg)
+  {" "}
+  <img
+    src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721882873/te0ga2fasz8xhz4196zy.jpg"
+    alt="The Frost"
+    title="The Frost"
+    style={{
+      display: "block",
+      marginTop: "10px",
+      marginLeft: "auto",
+      marginRight: "auto",
+      width: "90%",
+    }}
+  />
 
 - **Marketing and Advertising:** AI-generated images accelerate campaign production, eliminating the need for product photoshoots.
   Cosmopolitan’s AI-created cover marked the first use of an AI-generated image for a major magazine cover.
@@ -47,14 +84,14 @@ These models, trained on vast datasets, can produce entirely new images or modif
   and ultrasound from brief descriptions.
 
 <img
-  src="/assets/chapter_2/2.10.jpg"
-  alt="The Frost"
-  title="The Frost"
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721882868/q5b7tilg5y9jzdvpgcp8.jpg"
+  alt="Medicine"
+  title="Medicine"
   style={{
     display: "block",
     marginTop: "10px",
     marginLeft: "auto",
     marginRight: "auto",
-    width: "60%",
+    width: "90%",
   }}
 />
