--- a/pages/overview/relevant-research/genai-in-ecommerce.mdx
+++ b/pages/overview/relevant-research/genai-in-ecommerce.mdx
@@ -1,6 +1,17 @@
 # Generative AI in E-commerce
 
-![Generative AI in E-commerce](../../../public/assets/chapter_2/2.11.jpg)
+<img
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721894063/jylljffkofyq0xwpwmkb.jpg"
+  alt="Generative AI in E-commerce"
+  title="Generative AI in E-commerce"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ## Impact
 
