--- a/pages/overview/ai-era.mdx
+++ b/pages/overview/ai-era.mdx
@@ -1,39 +1,144 @@
 # The Era of GenAI
 
-![Era of GenAI](../../public/assets/chapter_2/2.3.png)
+<img
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721880358/ovcwjflmhdk57qxg8fmm.png"
+  alt="Era of GenAI"
+  title="Era of GenAI"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "100%",
+  }}
+/>
 
-The Era of GenAI marks a modern period with significant advancements in artificial intelligence. GenAI, once an abstract concept in computer science, has become indispensable in daily life. It permeates almost all fields, from science, technology, and economics to society, culture, and education, bringing unprecedented changes.
+The Era of GenAI marks a modern period with significant advancements in artificial intelligence. GenAI, once an abstract concept
+in computer science, has become indispensable in daily life. It permeates almost all fields, from science, technology, and economics
+to society, culture, and education, bringing unprecedented changes.
 
 ## GenAI Impact
 
-### Economic
+### Economy
 
-GenAI is transforming the global economy by creating new industries and optimizing production processes. It analyzes large datasets, predicts market trends, and supports business decision-making, enhancing operational efficiency, reducing costs, and increasing competitiveness.
+GenAI is transforming the global economy by creating new industries and optimizing production processes. It analyzes large datasets,
+predicts market trends, and supports business decision-making, enhancing operational efficiency, reducing costs, and increasing competitiveness.
+
+<img
+  src="https://www.metadialog.com/wp-content/uploads/feed_images/economic-impact-of-ai-exploring-potential-of-generative-ai-img-3.webp"
+  alt="Economy"
+  title="Economy"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### Healthcare
 
-In healthcare, GenAI has made significant strides, from automatic disease diagnosis to treatment support. It analyzes medical images, predicts disease risks, and suggests treatments, improving healthcare quality and reducing the workload for medical staff.
+In healthcare, GenAI has made significant strides, from automatic disease diagnosis to treatment support. It analyzes medical images,
+predicts disease risks, and suggests treatments, improving healthcare quality and reducing the workload for medical staff.
+
+<img
+  src="https://bairesdev.mo.cloudinary.net/blog/2023/09/AI-In-Healthcare.jpg?tx=w_1920,q_auto"
+  alt="Healthcare"
+  title="Healthcare"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### Education
 
-GenAI is revolutionizing education through personalized learning and teaching support tools. It analyzes students' progress, suggests suitable lessons, and assists teachers in classroom management. AI-integrated Learning Management Systems (LMS) enhance teaching and learning efficiency.
+GenAI is revolutionizing education through personalized learning and teaching support tools. It analyzes students' progress, suggests
+suitable lessons, and assists teachers in classroom management. AI-integrated Learning Management Systems (LMS) enhance teaching and
+learning efficiency.
+
+<img
+  src="https://elearningindustry.com/wp-content/uploads/2023/01/shutterstock_1846345372.jpg"
+  alt="Education"
+  title="Education"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### Transportation
 
-GenAI improves transportation with self-driving cars and intelligent traffic management systems. It optimizes routes, predicts traffic conditions, and suggests measures to reduce congestion, enhancing traffic safety and reducing travel time and costs.
+GenAI improves transportation with self-driving cars and intelligent traffic management systems. It optimizes routes, predicts
+traffic conditions, and suggests measures to reduce congestion, enhancing traffic safety and reducing travel time and costs.
+
+<img
+  src="https://smarttek.solutions/wp-content/uploads/ai-in-agriculture-1170x516.jpg"
+  alt="Agriculture"
+  title="Agriculture"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### Agriculture
 
-In agriculture, GenAI monitors crops and livestock, predicts harvests, and manages resources. It analyzes data from sensors, forecasts weather conditions, and optimizes production processes, boosting productivity and quality while minimizing environmental impact.
+In agriculture, GenAI monitors crops and livestock, predicts harvests, and manages resources. It analyzes data from sensors, forecasts
+weather conditions, and optimizes production processes, boosting productivity and quality while minimizing environmental impact.
+
+<img
+  src="https://www.prolim.com/wp-content/uploads/2021/09/AI_transportation.jpg"
+  alt="Transportation"
+  title="Transportation"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ### E-commerce
 
-GenAI significantly impacts online shopping by optimizing and personalizing user experiences. It recommends products, supports users through intelligent chatbots, and improves inventory and shipping management by predicting demand and optimizing delivery routes. GenAI also analyzes customer data and predicts shopping trends, enabling businesses to develop effective strategies and better serve customers.
+GenAI significantly impacts online shopping by optimizing and personalizing user experiences. It recommends products, supports users
+through intelligent chatbots, and improves inventory and shipping management by predicting demand and optimizing delivery routes.
+GenAI also analyzes customer data and predicts shopping trends, enabling businesses to develop effective strategies and better serve
+customers.
+
+<img
+  src="https://res.cloudinary.com/du9rk7a11/image/upload/v1721882546/mxvgkabolo3q7emurhqt.jpg"
+  alt="E-commerce"
+  title="E-commerce"
+  style={{
+    display: "block",
+    marginTop: "10px",
+    marginLeft: "auto",
+    marginRight: "auto",
+    width: "90%",
+  }}
+/>
 
 ## Limitations of GenAI
 
-Despite its advancements, Generative AI faces limitations. Poor or biased training data can lead to inaccurate results. Reliability remains a challenge, especially in high-precision fields like healthcare and law. Ethical and security concerns arise as GenAI can create fake information or infringe on privacy. Automation with GenAI also poses unemployment risks, particularly in IT and customer service jobs.
+Despite its advancements, Generative AI faces limitations. Poor or biased training data can lead to inaccurate results. Reliability
+remains a challenge, especially in high-precision fields like healthcare and law. Ethical and security concerns arise as GenAI can
+create fake information or infringe on privacy. Automation with GenAI also poses unemployment risks, particularly in IT and customer
+service jobs.
 
 ## Future Potential
 
-Generative AI holds vast potential for expanding and improving existing applications. It can create new products and services, improve production processes, and enhance user experiences. Current research focuses on improving model accuracy and reliability, reducing data bias, and exploring synergies between GenAI and technologies like IoT and blockchain to develop innovative solutions.
+Generative AI holds vast potential for expanding and improving existing applications. It can create new products and services, improve
+production processes, and enhance user experiences. Current research focuses on improving model accuracy and reliability, reducing data
+bias, and exploring synergies between GenAI and technologies like IoT and blockchain to develop innovative solutions.
