--- a/pages/application/software-development/technology.mdx
+++ b/pages/application/software-development/technology.mdx
@@ -13,9 +13,9 @@ Development Tools: Visual Studio Code, Postman
 <br />
 
 <img
-  src="/assets/architecture_design/mvc.png"
-  alt="MVC Model"
-  title="MVC Model"
+  src="/assets/development/tech.png"
+  alt="Technology"
+  title="Technology"
   style={{
     display: "block",
     marginLeft: "auto",
