update section subtitle

--- a/pages/application.mdx
+++ b/pages/application.mdx
@@ -1,3 +1,7 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={4} title={"Solution & Application Developement"} subTitle = {"Sub Title"} />
+<Chapter
+  chapterNumber={4}
+  title={"Solution & Application Developement"}
+  subTitle={"The project development process"}
+/>
