--- a/pages/application/software-architecture.mdx
+++ b/pages/application/software-architecture.mdx
@@ -4,7 +4,12 @@ import { Card, Cards } from "nextra/components";
 
 import Title from "../../components/Title/Title";
 
-<Title title={"Software Architecture Design"} subTitle={"abc"} />
+<Title
+  title={"Software Architecture Design"}
+  subTitle={
+    "The Software Architecture Design section provides a comprehensive overview of the system’s structural framework, including its components, their interactions, and the design principles guiding its development."
+  }
+/>
 
 <Cards>
   <Card title="Database Design" href="./software-architecture/database" />
