--- a/pages/conclusion.mdx
+++ b/pages/conclusion.mdx
@@ -1,3 +1,9 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={5} title={"Conclusion"} subTitle={"Sub Title"} />
+<Chapter
+  chapterNumber={5}
+  title={"Conclusion"}
+  subTitle={
+    "Present the achieved results, new contributions, and new proposals."
+  }
+/>
