--- a/pages/explore.mdx
+++ b/pages/explore.mdx
@@ -1,3 +1,9 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={3} title={"Experiment & Theory"} subTitle = {"Sub Title"} />
+<Chapter
+  chapterNumber={3}
+  title={"Experiment & Theory"}
+  subTitle={
+    "Present the theoretical basis, rationale, scientific hypotheses, and research methods that have been used"
+  }
+/>
