--- a/pages/future-direction.mdx
+++ b/pages/future-direction.mdx
@@ -1,3 +1,9 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={6} title={"Future Directions"} subTitle = {"Sub Title"} />
+<Chapter
+  chapterNumber={6}
+  title={"Future Directions"}
+  subTitle={
+    "Analyze and identify the limitations of the project, and propose future development directions."
+  }
+/>
