--- a/pages/overview.mdx
+++ b/pages/overview.mdx
@@ -1,3 +1,7 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={2} title={"Overview"} subTitle = {"Sub Title"} />
+<Chapter
+  chapterNumber={2}
+  title={"Overview"}
+  subTitle={"An Introduction to Our Approach"}
+/>
