--- a/pages/reference.mdx
+++ b/pages/reference.mdx
@@ -1,3 +1,7 @@
 import Chapter from "../components/Chapter/Chapter";
 
-<Chapter chapterNumber={7} title={"Reference"} subTitle = {"Sub Title"} />
+<Chapter
+  chapterNumber={7}
+  title={"Reference"}
+  subTitle={"Cite the documents and reference sources used in the project."}
+/>
