--- a/pages/application/software-development.mdx
+++ b/pages/application/software-development.mdx
@@ -4,7 +4,12 @@ import { Card, Cards } from "nextra/components";
 
 import Title from "../../components/Title/Title";
 
-<Title title={"Software Developement"} subTitle={"abc"} />
+<Title
+  title={"Software Developement"}
+  subTitle={
+    "The Software Development section outlines the methodologies, processes, and tools used in building the software, including coding practices, development phases, and quality assurance measures."
+  }
+/>
 
 <Cards>
   <Card title="Technology" href="./software-development/technology" />
