--- a/pages/application/software-interface.mdx
+++ b/pages/application/software-interface.mdx
@@ -4,7 +4,12 @@ import { Card, Cards } from "nextra/components";
 
 import Title from "../../components/Title/Title";
 
-<Title title={"UI/UX Design"} subTitle={"abc"} />
+<Title
+  title={"UI/UX Design"}
+  subTitle={
+    "The Software Interface Design section details the layout, functionality, and user interaction elements of the system's interfaces to ensure usability and seamless integration with other components."
+  }
+/>
 
 <Cards>
   <Card title="Overview about UI/UX Design" href="./software-interface/uiux" />
