--- a/pages/application/software-requirement.mdx
+++ b/pages/application/software-requirement.mdx
@@ -4,7 +4,12 @@ import { Card, Cards } from "nextra/components";
 
 import Title from "../../components/Title/Title";
 
-<Title title={"Software Requirement"} subTitle={"abc"} />
+<Title
+  title={"Software Requirement"}
+  subTitle={
+    "The Software Requirements section outlines the essential features, constraints, and specifications needed to ensure the successful development and deployment of the software."
+  }
+/>
 
 <Cards>
   <Card title="Objective" href="./software-requirement/objective" />
