--- a/pages/overview/relevant-research.mdx
+++ b/pages/overview/relevant-research.mdx
@@ -2,7 +2,10 @@
 
 import Title from "../../components/Title/Title";
 
-<Title title={"Relevant Research"} subTitle={"abc"} />
+<Title
+  title={"Relevant Research"}
+  subTitle={"Related research on the solutions mentioned in the project"}
+/>
 
 import { Card, Cards } from "nextra/components";
 
