update experiment and theory section:

--- a/pages/explore/comfyui.mdx
+++ b/pages/explore/comfyui.mdx
@@ -27,3 +27,9 @@ ComfyUI supports various image generation models like SD1.x, SD2.x, SDXL, etc., 
 5. **Accessibility for All:** ComfyUI is accessible on various types of hardware, ensuring that users with lower-end GPUs or no GPUs can still create content effectively.
 
 ![comfy](https://res.cloudinary.com/dgsrxvev1/image/upload/v1721835800/com_l06p36.png)
+
+**Reference:**
+
+- (ComfyUI )[https://www.runcomfy.com/comfyui-web]
+  -(Github: comfyanonymous/ComfyUI)[https://github.com/comfyanonymous/ComfyUI]
+  -(ComfyUI - Stable Diffusion Art)[https://stable-diffusion-art.com/comfyui/]
