--- a/pages/explore/llm-transformer.mdx
+++ b/pages/explore/llm-transformer.mdx
@@ -21,3 +21,8 @@ This model was first proposed in 2017 and replaced the Recurrent Neural Network 
 Unlike RNNs, which use recurrent architecture, Transformers utilize self-attention. In its architecture, the Transformer comprises 6 encoders and 6 decoders. Each encoder consists of two layers: Self-attention and Feedforward Neural Network (FNN).
 
 Self-Attention is a mechanism that allows the encoder to consider other words while encoding a specific word. As a result, Transformers can understand the relationships between words in a sentence, even if they are far apart. The decoders have a similar architecture, but there is an additional attention layer between them to focus on relevant parts of the input.
+
+**Reference:**
+
+- [OOTDiffusion: Outfitting Fusion based Latent Diffusion for Controllable Virtual Try-on](https://arxiv.org/abs/2403.01779)
+- [HuggingFace: levihsu/OOTDiffusion](https://huggingface.co/levihsu/OOTDiffusion)
