--- a/pages/explore/oot.mdx
+++ b/pages/explore/oot.mdx
@@ -15,3 +15,8 @@ The Outfitting over Try-on Diffusion (OOT Diffusion) model leverages the power o
 - **On the Right Side:** The input is an image of a person with the target area obscured. This image is combined with Gaussian noise and fed into the UNet denoising network over multiple sampling steps. After several steps of denoising, the latent representation is decoded back into the image space as the output image through a VAE decoder.
 
 ![process](https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832930/outfiting_fusion_fgjasd.png)
+
+**Reference:**
+
+- [OOTDiffusion: Outfitting Fusion based Latent Diffusion for Controllable Virtual Try-on](https://arxiv.org/abs/2403.01779)
+- [HuggingFace: levihsu/OOTDiffusion](https://huggingface.co/levihsu/OOTDiffusion)
