--- a/pages/explore/rag.mdx
+++ b/pages/explore/rag.mdx
@@ -45,3 +45,10 @@ After obtaining the relevant text passages, the LLM uses these passages in conju
 **Summary:**
 
 Retrieval Augmented Generation (RAG) has revolutionized natural language processing by combining the strengths of information retrieval and text generation. This approach enhances the performance of language models by allowing them to access and incorporate relevant external information, resulting in more accurate, detailed, and coherent responses. By integrating retrieval and generation components, RAG improves tasks such as question answering and document summarization and introduces new capabilities for information extraction and language interaction. This advancement makes natural language processing systems smarter and more efficient, driving progress in research and development within the field.
+
+**Reference:**
+
+- [Retrieval Augmented Generation for AI-Generated Content: A Survey](https://arxiv.org/abs/2402.19473v3)
+
+- [What is RAG (Retrieval-Augmented Generation)?](https://aws.amazon.com/what-is/retrieval-augmented-generation/)
+- [Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks](https://arxiv.org/abs/2005.11401)
