--- a/pages/explore/react-agent.mdx
+++ b/pages/explore/react-agent.mdx
@@ -18,3 +18,11 @@ The process involves three stages: Thought, Action, and Observation.
 **The Integration of ReAct Agent and RAG:**
 
 ![reactic-rag](https://res.cloudinary.com/dgsrxvev1/image/upload/v1721832884/agentic_rag_fmwpns.png)
+
+**Reference:**
+
+- [ReAct: Synergizing Reasoning and Acting in Language Models](https://arxiv.org/abs/2210.03629)
+- [ReAct Agent Model](https://klu.ai/glossary/react-agent-model)
+- [LLM Agents Demystified](https://towardsdatascience.com/llm-agents-demystified-8e2a62c185fa) -[Using Langchain ReAct Agent with QrantDB and Llama3 For Intelligent Information Retrieval](https://medium.com/@yash9439/using-langchain-react-agents-with-qdrant-and-llama3-for-intelligent-information-retrieval-b181ce7a5962)
+- [Teaching LLMs to Think and Act: ReAct Prompt Engineering](https://medium.com/@bryan.mckenney/teaching-llms-to-think-and-act-react-prompt-engineering-eef278555a2e)
+- [Open-source LLMs as LangChain Agents](https://huggingface.co/blog/open-source-llms-as-agents)
