update: add reference in ipadapter section

--- a/pages/explore/comfyui.mdx
+++ b/pages/explore/comfyui.mdx
@@ -30,6 +30,6 @@ ComfyUI supports various image generation models like SD1.x, SD2.x, SDXL, etc., 
 
 **Reference:**
 
-- (ComfyUI )[https://www.runcomfy.com/comfyui-web]
-  -(Github: comfyanonymous/ComfyUI)[https://github.com/comfyanonymous/ComfyUI]
-  -(ComfyUI - Stable Diffusion Art)[https://stable-diffusion-art.com/comfyui/]
+- [ComfyUI](https://www.runcomfy.com/comfyui-web)
+- [Github: comfyanonymous/ComfyUI](https://github.com/comfyanonymous/ComfyUI)
+- [ComfyUI - Stable Diffusion Art](https://stable-diffusion-art.com/comfyui/)
